qt6/gen_qgraphicsview.nim

proc fcQGraphicsView_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_tabletEvent".}
proc fQGraphicsView_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_actionEvent".}
proc fcQGraphicsView_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_actionEvent".}
proc fQGraphicsView_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_hideEvent".}
proc fcQGraphicsView_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_hideEvent".}
proc fQGraphicsView_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QGraphicsView_virtualbase_nativeEvent".}
proc fcQGraphicsView_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_nativeEvent".}
proc fQGraphicsView_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QGraphicsView_virtualbase_metric".}
proc fcQGraphicsView_override_virtual_metric(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_metric".}
proc fQGraphicsView_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QGraphicsView_virtualbase_initPainter".}
proc fcQGraphicsView_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_initPainter".}
proc fQGraphicsView_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QGraphicsView_virtualbase_redirected".}
proc fcQGraphicsView_override_virtual_redirected(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_redirected".}
proc fQGraphicsView_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QGraphicsView_virtualbase_sharedPainter".}
proc fcQGraphicsView_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_sharedPainter".}
proc fQGraphicsView_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_timerEvent".}
proc fcQGraphicsView_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_timerEvent".}
proc fQGraphicsView_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_childEvent".}
proc fcQGraphicsView_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_childEvent".}
proc fQGraphicsView_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QGraphicsView_virtualbase_customEvent".}
proc fcQGraphicsView_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_customEvent".}
proc fQGraphicsView_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QGraphicsView_virtualbase_connectNotify".}
proc fcQGraphicsView_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_connectNotify".}
proc fQGraphicsView_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QGraphicsView_virtualbase_disconnectNotify".}
proc fcQGraphicsView_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QGraphicsView_override_virtual_disconnectNotify".}
proc fcQGraphicsView_delete(self: pointer) {.importc: "QGraphicsView_delete".}


func init*(T: type QGraphicsView, h: ptr cQGraphicsView): QGraphicsView =
  T(h: h)
proc create*(T: type QGraphicsView, parent: gen_qwidget.QWidget): QGraphicsView =

  QGraphicsView.init(fcQGraphicsView_new(parent.h))
proc create*(T: type QGraphicsView, ): QGraphicsView =

  QGraphicsView.init(fcQGraphicsView_new2())
proc create2*(T: type QGraphicsView, scene: gen_qgraphicsscene.QGraphicsScene): QGraphicsView =

  QGraphicsView.init(fcQGraphicsView_new3(scene.h))
proc create*(T: type QGraphicsView, scene: gen_qgraphicsscene.QGraphicsScene, parent: gen_qwidget.QWidget): QGraphicsView =

  QGraphicsView.init(fcQGraphicsView_new4(scene.h, parent.h))
proc metaObject*(self: QGraphicsView, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQGraphicsView_metaObject(self.h))

proc metacast*(self: QGraphicsView, param1: cstring): pointer =

  fcQGraphicsView_metacast(self.h, param1)

proc metacall*(self: QGraphicsView, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQGraphicsView_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QGraphicsView, s: cstring): string =

  let v_ms = fcQGraphicsView_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc sizeHint*(self: QGraphicsView, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQGraphicsView_sizeHint(self.h))

proc renderHints*(self: QGraphicsView, ): gen_qpainter.QPainterRenderHint =

  gen_qpainter.QPainterRenderHint(fcQGraphicsView_renderHints(self.h))

proc setRenderHint*(self: QGraphicsView, hint: gen_qpainter.QPainterRenderHint): void =

  fcQGraphicsView_setRenderHint(self.h, cint(hint))

proc setRenderHints*(self: QGraphicsView, hints: gen_qpainter.QPainterRenderHint): void =

  fcQGraphicsView_setRenderHints(self.h, cint(hints))

proc alignment*(self: QGraphicsView, ): gen_qnamespace.AlignmentFlag =

  gen_qnamespace.AlignmentFlag(fcQGraphicsView_alignment(self.h))

proc setAlignment*(self: QGraphicsView, alignment: gen_qnamespace.AlignmentFlag): void =

  fcQGraphicsView_setAlignment(self.h, cint(alignment))

proc transformationAnchor*(self: QGraphicsView, ): QGraphicsViewViewportAnchor =

  QGraphicsViewViewportAnchor(fcQGraphicsView_transformationAnchor(self.h))

proc setTransformationAnchor*(self: QGraphicsView, anchor: QGraphicsViewViewportAnchor): void =

  fcQGraphicsView_setTransformationAnchor(self.h, cint(anchor))

proc resizeAnchor*(self: QGraphicsView, ): QGraphicsViewViewportAnchor =

  QGraphicsViewViewportAnchor(fcQGraphicsView_resizeAnchor(self.h))

proc setResizeAnchor*(self: QGraphicsView, anchor: QGraphicsViewViewportAnchor): void =

  fcQGraphicsView_setResizeAnchor(self.h, cint(anchor))

proc viewportUpdateMode*(self: QGraphicsView, ): QGraphicsViewViewportUpdateMode =

  QGraphicsViewViewportUpdateMode(fcQGraphicsView_viewportUpdateMode(self.h))

proc setViewportUpdateMode*(self: QGraphicsView, mode: QGraphicsViewViewportUpdateMode): void =

  fcQGraphicsView_setViewportUpdateMode(self.h, cint(mode))

proc optimizationFlags*(self: QGraphicsView, ): QGraphicsViewOptimizationFlag =

  QGraphicsViewOptimizationFlag(fcQGraphicsView_optimizationFlags(self.h))

proc setOptimizationFlag*(self: QGraphicsView, flag: QGraphicsViewOptimizationFlag): void =

  fcQGraphicsView_setOptimizationFlag(self.h, cint(flag))

proc setOptimizationFlags*(self: QGraphicsView, flags: QGraphicsViewOptimizationFlag): void =

  fcQGraphicsView_setOptimizationFlags(self.h, cint(flags))

proc dragMode*(self: QGraphicsView, ): QGraphicsViewDragMode =

  QGraphicsViewDragMode(fcQGraphicsView_dragMode(self.h))

proc setDragMode*(self: QGraphicsView, mode: QGraphicsViewDragMode): void =

  fcQGraphicsView_setDragMode(self.h, cint(mode))

proc rubberBandSelectionMode*(self: QGraphicsView, ): gen_qnamespace.ItemSelectionMode =

  gen_qnamespace.ItemSelectionMode(fcQGraphicsView_rubberBandSelectionMode(self.h))

proc setRubberBandSelectionMode*(self: QGraphicsView, mode: gen_qnamespace.ItemSelectionMode): void =

  fcQGraphicsView_setRubberBandSelectionMode(self.h, cint(mode))

proc rubberBandRect*(self: QGraphicsView, ): gen_qrect.QRect =

  gen_qrect.QRect(h: fcQGraphicsView_rubberBandRect(self.h))

proc cacheMode*(self: QGraphicsView, ): QGraphicsViewCacheModeFlag =

  QGraphicsViewCacheModeFlag(fcQGraphicsView_cacheMode(self.h))

proc setCacheMode*(self: QGraphicsView, mode: QGraphicsViewCacheModeFlag): void =

  fcQGraphicsView_setCacheMode(self.h, cint(mode))

proc resetCachedContent*(self: QGraphicsView, ): void =

  fcQGraphicsView_resetCachedContent(self.h)

proc isInteractive*(self: QGraphicsView, ): bool =

  fcQGraphicsView_isInteractive(self.h)

proc setInteractive*(self: QGraphicsView, allowed: bool): void =

  fcQGraphicsView_setInteractive(self.h, allowed)

proc scene*(self: QGraphicsView, ): gen_qgraphicsscene.QGraphicsScene =

  gen_qgraphicsscene.QGraphicsScene(h: fcQGraphicsView_scene(self.h))

proc setScene*(self: QGraphicsView, scene: gen_qgraphicsscene.QGraphicsScene): void =

  fcQGraphicsView_setScene(self.h, scene.h)

proc sceneRect*(self: QGraphicsView, ): gen_qrect.QRectF =

  gen_qrect.QRectF(h: fcQGraphicsView_sceneRect(self.h))

proc setSceneRect*(self: QGraphicsView, rect: gen_qrect.QRectF): void =

  fcQGraphicsView_setSceneRect(self.h, rect.h)

proc setSceneRect2*(self: QGraphicsView, x: float64, y: float64, w: float64, h: float64): void =

  fcQGraphicsView_setSceneRect2(self.h, x, y, w, h)

proc transform*(self: QGraphicsView, ): gen_qtransform.QTransform =

  gen_qtransform.QTransform(h: fcQGraphicsView_transform(self.h))

proc viewportTransform*(self: QGraphicsView, ): gen_qtransform.QTransform =

  gen_qtransform.QTransform(h: fcQGraphicsView_viewportTransform(self.h))

proc isTransformed*(self: QGraphicsView, ): bool =

  fcQGraphicsView_isTransformed(self.h)

proc setTransform*(self: QGraphicsView, matrix: gen_qtransform.QTransform): void =

  fcQGraphicsView_setTransform(self.h, matrix.h)

proc resetTransform*(self: QGraphicsView, ): void =

  fcQGraphicsView_resetTransform(self.h)

proc rotate*(self: QGraphicsView, angle: float64): void =

  fcQGraphicsView_rotate(self.h, angle)

proc scale*(self: QGraphicsView, sx: float64, sy: float64): void =

  fcQGraphicsView_scale(self.h, sx, sy)

proc shear*(self: QGraphicsView, sh: float64, sv: float64): void =

  fcQGraphicsView_shear(self.h, sh, sv)

proc translate*(self: QGraphicsView, dx: float64, dy: float64): void =

  fcQGraphicsView_translate(self.h, dx, dy)

proc centerOn*(self: QGraphicsView, pos: gen_qpoint.QPointF): void =

  fcQGraphicsView_centerOn(self.h, pos.h)

proc centerOn2*(self: QGraphicsView, x: float64, y: float64): void =

  fcQGraphicsView_centerOn2(self.h, x, y)

proc centerOnWithItem*(self: QGraphicsView, item: gen_qgraphicsitem.QGraphicsItem): void =

  fcQGraphicsView_centerOnWithItem(self.h, item.h)

proc ensureVisible*(self: QGraphicsView, rect: gen_qrect.QRectF): void =

  fcQGraphicsView_ensureVisible(self.h, rect.h)

proc ensureVisible2*(self: QGraphicsView, x: float64, y: float64, w: float64, h: float64): void =

  fcQGraphicsView_ensureVisible2(self.h, x, y, w, h)

proc ensureVisibleWithItem*(self: QGraphicsView, item: gen_qgraphicsitem.QGraphicsItem): void =

  fcQGraphicsView_ensureVisibleWithItem(self.h, item.h)

proc fitInView*(self: QGraphicsView, rect: gen_qrect.QRectF): void =

  fcQGraphicsView_fitInView(self.h, rect.h)

proc fitInView2*(self: QGraphicsView, x: float64, y: float64, w: float64, h: float64): void =

  fcQGraphicsView_fitInView2(self.h, x, y, w, h)

proc fitInViewWithItem*(self: QGraphicsView, item: gen_qgraphicsitem.QGraphicsItem): void =

  fcQGraphicsView_fitInViewWithItem(self.h, item.h)

proc render*(self: QGraphicsView, painter: gen_qpainter.QPainter): void =

  fcQGraphicsView_render(self.h, painter.h)

proc items*(self: QGraphicsView, ): seq[gen_qgraphicsitem.QGraphicsItem] =

  var v_ma = fcQGraphicsView_items(self.h)
  var vx_ret = newSeq[gen_qgraphicsitem.QGraphicsItem](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qgraphicsitem.QGraphicsItem(h: v_outCast[i])
  vx_ret

proc itemsWithPos*(self: QGraphicsView, pos: gen_qpoint.QPoint): seq[gen_qgraphicsitem.QGraphicsItem] =
